<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FoodFinder</string>
    <string name="action_restaurant_prefs">Restaurant-Präferenzen</string>
    <string name="action_settings">Einstellungen</string>
    <string name="settings_budget">Budget</string>
    <string name="settings_preferred">Vorlieben</string>
    <string name="settings_preferred_add_new">Neue Vorliebe hinzufügen</string>
    <string name="settings_preferred_remove">Vorliebe löschen</string>
    <string name="settings_allergies">Allergien</string>
    <string name="settings_allergies_add_new">Neue Allergie hinzufügen</string>
    <string name="settings_allergies_remove">Allergie löschen</string>
    <string name="settings_appetite">Appetit</string>
    <string name="settings_save">Speichern</string>
    <string name="settings_plusone">Begleitung</string>
    <string name="rating_new">Neue Bewertung</string>
    <string name="rating_stars">Bewertung</string>
    <string name="rating_send_new">Bewertung absenden</string>
    <string name="rating_user_name">Benutzername</string>
    <string name="rating_comment">Kommentar</string>
    <string name="no_maps_app">Keine Karten-App installiert.</string>
    <string name="ok">OK</string>
</resources>
